// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StafferList > renders only the add row when there are no staffers 1`] = `
<DocumentFragment>
  <section
    class="mt-8"
  >
    <h2
      class="text-lg font-semibold"
    >
      Office Staff
    </h2>
    <div
      class="mt-3 grid gap-3 sm:grid-cols-2"
    />
    <div
      class="mt-3"
    >
      <button
        class="flex items-center gap-2 rounded-md border border-dashed px-4 py-2 text-sm text-muted-foreground transition-colors hover:border-foreground hover:text-foreground"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Staffer
      </button>
    </div>
  </section>
</DocumentFragment>
`;

exports[`StafferList > renders staffer rows plus the add row 1`] = `
<DocumentFragment>
  <section
    class="mt-8"
  >
    <h2
      class="text-lg font-semibold"
    >
      Office Staff
    </h2>
    <div
      class="mt-3 grid gap-3 sm:grid-cols-2"
    >
      <div
        class="rounded-lg border p-4"
      >
        <div
          class="flex items-start justify-between gap-4"
        >
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-baseline gap-x-2"
            >
              <span
                class="font-bold"
              >
                Sam Jones
              </span>
              <span
                class="text-sm text-muted-foreground"
              >
                (they/them)
              </span>
            </div>
            <p
              class="mt-0.5 text-sm text-primary"
            >
              Chief of Staff
            </p>
            <div
              class="mt-2 flex flex-col gap-1 text-sm text-muted-foreground"
            >
              <span
                class="flex items-center gap-1.5"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-mail shrink-0"
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
                  />
                  <rect
                    height="16"
                    rx="2"
                    width="20"
                    x="2"
                    y="4"
                  />
                </svg>
                <a
                  class="text-primary hover:underline"
                  href="mailto:sam@example.com"
                >
                  sam@example.com
                </a>
              </span>
            </div>
            <details
              class="mt-3 text-sm"
            >
              <summary
                class="cursor-pointer text-muted-foreground"
              >
                Notes
              </summary>
              <div
                class="prose prose-sm mt-1 max-w-none rounded border p-2 text-foreground dark:prose-invert prose-headings:my-1 prose-p:my-0 prose-a:text-primary prose-code:rounded prose-code:bg-muted prose-code:px-1 prose-code:text-foreground prose-code:before:content-none prose-code:after:content-none prose-pre:my-2 prose-pre:bg-muted"
              >
                <p>
                  Primary contact for healthcare policy.
                </p>
              </div>
            </details>
          </div>
          <div
            class="flex shrink-0 gap-2"
          >
            <button
              aria-label="Edit staffer"
              class="inline-flex shrink-0 items-center justify-center gap-2 rounded-md text-sm font-medium whitespace-nowrap transition-all outline-none focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 size-9 h-8 w-8"
              data-size="icon"
              data-slot="button"
              data-variant="outline"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-settings"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="rounded-lg border p-4"
      >
        <div
          class="flex items-start justify-between gap-4"
        >
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-baseline gap-x-2"
            >
              <span
                class="font-bold"
              >
                Avery Kim
              </span>
            </div>
            <div
              class="mt-2 flex flex-col gap-1 text-sm text-muted-foreground"
            />
          </div>
          <div
            class="flex shrink-0 gap-2"
          >
            <button
              aria-label="Edit staffer"
              class="inline-flex shrink-0 items-center justify-center gap-2 rounded-md text-sm font-medium whitespace-nowrap transition-all outline-none focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 size-9 h-8 w-8"
              data-size="icon"
              data-slot="button"
              data-variant="outline"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-settings"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <button
        class="flex items-center gap-2 rounded-md border border-dashed px-4 py-2 text-sm text-muted-foreground transition-colors hover:border-foreground hover:text-foreground"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Staffer
      </button>
    </div>
  </section>
</DocumentFragment>
`;
